restore device administrator status plus enable all features

--- a/aFWall/build.gradle
+++ b/aFWall/build.gradle
@@ -4,12 +4,12 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "dev.ukanth.ufirewall"
+        applicationId "dev.ukanth.ufirewall.donate"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 16400
         versionName "3.0.0"
-        //buildConfigField 'boolean', 'DONATE', 'true'
+        buildConfigField 'boolean', 'DONATE', 'true'
     }
 
     compileOptions {
