--- a/aFWall/src/main/AndroidManifest.xml
+++ b/aFWall/src/main/AndroidManifest.xml
@@ -272,7 +272,7 @@
         <!-- device admin -->
         <!-- This is required this receiver to become device admin component. -->
 
-        <!-- <receiver
+        <receiver
             android:name=".admin.AdminDeviceReceiver"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
             <meta-data
@@ -286,7 +286,7 @@
                 <action android:name="android.app.action.ACTION_DEVICE_ADMIN_DISABLED" />
                 <action android:name="android.app.action.DEVICE_ADMIN_DISABLED" />
             </intent-filter>
-        </receiver> -->
+        </receiver>
 
         <!-- Tasker/Locale Plugin -->
 
